--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <p class="message">Start guessing...</p>
         <p class="label-score">💯 Score: <span class="score">20</span></p>
         <p class="label-highscore">
-          🥇 Highscore: <span class="highscore">0</span>
+          🥇 Highscore: <span class="highscore"></span>
         </p>
+        <button class="btn reset">Reset High Score</button>
       </section>
     </main>
     <script src="script.js"></script>
