feat: add modules

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <button class="btn reset">Reset High Score</button>
       </section>
     </main>
-    <script src="script.js"></script>
+    <script src="variables.js" type="module"></script>
+    <script src="functions.js" type="module"></script>
+    <script src="script.js" type="module"></script>
   </body>
 </html>
